--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: test
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 nose
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -e .[dev]
     - name: Test with nosetest
       run: |
         python -m nose
