--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 nose
+        pip install nose
         pip install -e .[dev]
-    - name: Test with nosetest
-      run: |
-        python -m nose
+        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        chmod +x ./cc-test-reporter
+        ./cc-test-reporter before-build
+    - name: Test and Coverage
+      uses: paambaati/codeclimate-action@v2.2.4
+      with:
+        coverageCommand: coverage -m nose
+
