--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,12 @@ jobs:
         pip install coverage nose
         pip install -e .[dev]
     - name: Test and Coverage
-      uses: paambaati/codeclimate-action@v2.6.0
       env:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}      
-      with:
-        coverageCommand: coverage run -m nose
+      run: |
+        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        chmod +x ./cc-test-reporter
+        ./cc-test-reporter before-build
+        coverage run -m nose
+        ./cc-test-reporter format-coverage -t coverage.py
+        ./cc-test-reporter upload-coverage
