--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,16 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 nose
+        pip install coverage nose
         pip install -e .[dev]
-    - name: Test with nosetest
+    - name: Test and Coverage
+      env:
+        CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}      
       run: |
-        python -m nose
+        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        chmod +x ./cc-test-reporter
+        ./cc-test-reporter before-build
+        coverage run -m nose
+        coverage xml
+        ./cc-test-reporter format-coverage -t coverage.py
+        ./cc-test-reporter upload-coverage
